# intmax-zkp-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: continuousIntegration.yml  dependencyCheck.yml  test.yml
docs/: coding_rule.md  coding_rules.md
src/: lib.rs
src/.bin/: verify_smt_process.rs
src/another_spec/: mod.rs
src/another_spec/circuits/: mod.rs
src/another_spec/common/: asset.rs  block.rs  mod.rs  recursion.rs  transaction.rs  utils.rs
src/another_spec/utils/: signature.rs
src/config/: mod.rs
src/ecdsa/: README.md  account.rs
src/merkle_tree/: mod.rs  sparse_merkle_tree.rs  tree.rs
src/merkle_tree/gadgets/: mod.rs  utils.rs
src/new_transaction/: asset.rs
src/new_transaction/circuits/: mod.rs
src/new_transaction/tree/: tx_diff.rs  user_asset.rs
src/newspec/: mod.rs
src/newspec/aggregator/: deposit_tree.rs  mod.rs  partial_world_state_tree.rs  transaction_tree.rs  withdraw_tree.rs  world_state_tree.rs
src/newspec/client/: mod.rs  nullifier_hash_tree.rs  purge.rs  user_asset_tree.rs  wrapper.rs
src/newspec/common/: account.rs  asset.rs  block.rs  block_header.rs  config.rs  mod.rs  traits.rs  transaction.rs  user_state.rs
src/newspec/utils/: mod.rs
src/poseidon/: README.md
src/poseidon/gadgets/: mod.rs
src/recursion/gadgets/: mod.rs
src/rollup/: address_list.rs  block.rs  deposit.rs  mod.rs
src/rollup/circuits/: mod.rs
src/rollup/gadgets/: address_list.rs  approval_block.rs  batch.rs  deposit_block.rs  mod.rs  proposal_block.rs
src/sparse_merkle_tree/: README.md  layered_layered_tree.rs  layered_tree.rs  mod.rs  node_data.rs  node_hash.rs  proof.rs  root_data.rs  tree.rs  utils.rs
src/sparse_merkle_tree/gadgets/: common.rs  mod.rs
src/sparse_merkle_tree/goldilocks_poseidon/: hash.rs  memory.rs  mod.rs
src/sparse_merkle_tree/proof/: common.rs  inclusion.rs  mod.rs  process.rs
src/sparse_merkle_tree/storage_layout/: layered_layered_tree.rs  layered_tree.rs  mod.rs  tree.rs  types.rs
src/transaction/: asset.rs  block_header.rs  mod.rs
src/transaction/circuits/: mod.rs
src/transaction/gadgets/: merge.rs  (+5 more)
src/utils/: common.rs  mod.rs
src/zkdsa/: README.md  account.rs  mod.rs  signature.rs
test_cases/: block1_info.json
tests/: test_data.rs
(+47 files in other folders)
