[package]
name = "intmax-zkp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"
num = "0.4"
num-bigint = "0.4.3"
num-traits = "0.2"
plonky2 = { git = "https://github.com/mir-protocol/plonky2", rev = "d527073416dd8cbc04457b8cb856b2fec3fa0e6c" }
plonky2_ecdsa = { git = "https://github.com/mir-protocol/plonky2", rev = "d527073416dd8cbc04457b8cb856b2fec3fa0e6c" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0"
web3 = "0.15"

[lib]

[features]
default = ["std"]
std = []
