[package]
name = "intmax-zkp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = { version = "0.4", features = ["serde"] }
num = "0.4"
plonky2 = { git = "https://github.com/InternetMaximalism/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
plonky2_ecdsa = { git = "https://github.com/InternetMaximalism/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1"
serde_json = "1.0"

[features]
ecdsa = ["dep:plonky2_ecdsa"]
parallel = ["plonky2/parallel"]

[lib]
