[package]
name = "intmax-zkp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = { version = "0.4", features = ["serde"] }
num = "0.4"
plonky2 = { git = "https://github.com/InternetMaximalism/plonky2", rev = "f99ed9c", default-features = false }
plonky2_ecdsa = { git = "https://github.com/InternetMaximalism/plonky2", rev = "f99ed9c", default-features = false , optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["parallel"]
ecdsa = ["dep:plonky2_ecdsa"]
parallel = ["plonky2/parallel"]

[lib]
